Fix raw code blocks in dark mode

--- a/docs/.vitepress/theme/styles/code.styl
+++ b/docs/.vitepress/theme/styles/code.styl
@@ -217,3 +217,7 @@ pre[class*='language-'] {
   border-radius: 6px;
   overflow: auto;
 }
+
+.dark .vp-raw {
+  background-color: #333;
+}
